--- a/web/public/css/lepv.css
+++ b/web/public/css/lepv.css
@@ -92,6 +92,16 @@
     padding-bottom: 3px;
 }
 
+.gauge-div {
+    padding-right: 2px;
+    padding-left: 2px;
+}
+
+.summary_div {
+    padding-top: 2px;
+    padding-bottom: 2px;
+}
+
 /*the '.flip-clock-wrapper ul' properties represent each digit's containing box.*/
 
 /*the line-height of '.flip-clock-wrapper ul li' should match the height of '.flip-clock-wrapper ul'.*/
