--- a/web/public/css/lepv.css
+++ b/web/public/css/lepv.css
@@ -97,7 +97,17 @@
     padding-left: 2px;
 }
 
+.padding-horizontal-close {
+    padding-right: 2px;
+    padding-left: 2px;
+}
+
 .summary_div {
+    padding-top: 2px;
+    padding-bottom: 2px;
+}
+
+.padding-vertical-close {
     padding-top: 2px;
     padding-bottom: 2px;
 }
